--- a/css/style.scss
+++ b/css/style.scss
@@ -692,3 +692,520 @@ body {
     }
 }
 // Footer end
+
+// Modal
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    display: none;
+    align-items: center;
+    justify-content: center;
+
+    &.active {
+        display: flex;
+    }
+
+    &__bg {
+        background: rgba(51, 48, 48, 0.72);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__content {
+        position: relative;
+        background: white;
+        width: 823px;
+        border-radius: 30px;
+        padding: 65px 78px 82px 72px;
+        font-family: $font-montserrat;
+
+        @include media(992) {
+            padding: 30px 20px;
+            width: calc(100% - 40px);
+        }
+    }
+
+    &__close {
+        position: absolute;
+        top: 23px;
+        right: 38px;
+
+        @include media(992) {
+            top: 35px;
+            right: 30px;
+        }
+    }
+
+    h3 {
+        font-size: 38px;
+        font-weight: 500;
+        margin-bottom: 41px;
+
+        @include media(992) {
+            font-size: 28px;
+            margin-bottom: 30px;
+        }
+    }
+
+    .inp_wrap {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        margin-bottom: 23px;
+
+        @include media(992) {
+            margin-bottom: 15px;
+            gap: 20px;
+        }
+
+        input {
+            width: 100%;
+            height: 70px;
+            background: #F0F0F0;
+            border: 1px solid rgba(0, 0, 0, 0.36);
+            border-radius: 17px;
+            padding: 0 36px;
+            font-size: 20px;
+
+            @include media(992) {
+                height: 50px;
+                padding: 0 20px;
+                font-size: 16px;
+                border-radius: 10px;
+            }
+
+            &::placeholder {
+                color: black;
+            }
+        }
+    }
+
+    .text {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 39px;
+
+        @include media(992) {
+            font-size: 16px;
+            margin-bottom: 30px;
+        }
+
+        a {
+            color: #095E88;
+        }
+    }
+
+    .btn_yellow {
+        width: 100%;
+        height: 70px;
+        border: 1px solid rgba(0, 0, 0, 0.36);
+        background: #FECE30;
+        font-size: 20px;
+        font-weight: 600;
+        border-radius: 17px;
+
+        @include media(992) {
+            font-size: 16px;
+            height: 50px;
+            border-radius: 10px;
+        }
+    }
+
+    h5 {
+        font-size: 21px;
+        font-weight: 500;
+        margin: 37px 0 32px;
+
+        @include media(992) {
+            font-size: 16px;
+            margin: 20px 0;
+        }
+    }
+
+    h4 {
+        font-size: 24px;
+        font-weight: 500;
+        text-align: center;
+        margin: 63px 0 26px;
+
+        @include media(992) {
+            font-size: 20px;
+            margin-top: 40px;
+        }
+    }
+
+    .links {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 12px;
+
+        img {
+            width: 44px;
+            height: 44px;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+    }
+}
+// Modal end
+
+// Profile
+.profile {
+    padding: 43px 0 39px;
+    font-family: $font-montserrat;
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    &__title {
+        font-size: 32px;
+        font-weight: 600;
+        margin-bottom: 55px;
+    }
+
+    .icon {
+        width: 158px;
+        height: 158px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        background: #FDD228;
+        font-size: 96px;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
+
+    a {
+        font-size: 20px;
+        font-weight: 400;
+    }
+
+    .name {
+        font-size: 24px;
+        font-weight: 500;
+        margin: 44px 0 16px;
+    }
+
+    .stars {
+        display: flex;
+        align-items: center;
+        margin-bottom: 19px;
+
+        h4 {
+            font-size: 18px;
+            font-weight: 600;
+        }
+
+        div {
+            margin: 0 10px 0 4px;
+            display: flex;
+            align-items: center;
+        }
+
+        p {
+            font-size: 18px;
+            color: #0099F8;
+        }
+    }
+}
+// Profile end
+
+// My ads
+.my-ads {
+    padding-bottom: 146px;
+    font-family: $font-montserrat;
+
+    &__title {
+        text-align: center;
+        font-size: 32px;
+        font-weight: 600;
+        margin-bottom: 122px;
+
+        @include media(992) {
+            margin-bottom: 50px;
+        }
+    }
+
+    &__navs {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 318px;
+        margin-bottom: 97px;
+
+        @include media(1250) {
+            width: 100%;
+            gap: 0px;
+            justify-content: space-between;
+        }
+
+        @include media(992) {
+            margin-bottom: 50px;
+        }
+
+        a {
+            font-size: 32px;
+            font-weight: 600;
+            padding-bottom: 14px;
+            position: relative;
+            padding-right: 6px;
+
+            @include media(992) {
+                font-size: 16px;
+            }
+
+            img {
+                display: none;
+                position: absolute;
+                right: 0;
+                top: -15px;
+            }
+
+            &.active {
+                border-bottom: 1px solid black;
+                
+                img {
+                    display: block;
+                }
+            }
+        }
+    }
+
+    &__card {
+        display: flex;
+        align-items: flex-start;
+        gap: 44px;
+        font-family: $font-open-sans;
+        max-width: 1048px;
+        margin: 0 auto;
+
+        @include media(992) {
+            flex-direction: column;
+            gap: 20px;
+            align-items: center;
+        }
+
+        &_left {
+            width: 317px;
+            flex-shrink: 0;
+            border: 1px solid #DEDEE2;
+            border-radius: 10px;
+            padding: 26px 0 20px;
+            cursor: pointer;
+            user-select: none;
+
+            @include media(650) {
+                width: 300px;
+            }
+
+            .main-img {
+                width: calc(100% - 12px);
+                height: 213px;
+                object-fit: contain;
+                display: block;
+                margin: 0 auto 26px;
+            }
+
+            .card-body {
+                padding: 0 20px;
+            }
+            
+            .name {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin-bottom: 11px;
+
+                h4 {
+                    font-size: 14px;
+                    font-weight: bold;
+                    color: #7A7680;
+                }
+            }
+
+            .stars {
+                display: flex;
+                align-items: center;
+                gap: 6px;
+
+                &_in {
+                    display: flex;
+                    align-items: center;
+                    gap: 3px;
+                    
+                    svg:not(.active) path {
+                        fill: #C5C3C8;
+                    }
+                }
+
+                &_text {
+                    font-size: 14px;
+                    line-height: 18px;
+
+                    span {
+                        color: #55556D;
+                    }
+                }
+            }
+
+            .title {
+                font-size: 16px;
+                font-weight: 600;
+                line-height: 22px;
+                margin-bottom: 33px;
+            }
+
+            .price {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                &_value {
+                    display: flex;
+                    align-items: flex-start;
+                    gap: 2px;
+                    font-size: 30px;
+                    font-weight: 600;
+                    line-height: 30px;
+
+                    del {
+                        font-size: 16px;
+                        font-weight: 400;
+                        line-height: 20px;
+                        color: #7A7680;
+                    }
+                }
+            }
+
+            a {
+                width: 40px;
+                height: 40px;
+                border-radius: 8px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border: 2px solid #6B59CC;
+
+                img:nth-child(2) {
+                    display: none;
+                }
+            }
+
+            &:hover {
+                border-color: #F4F5F6;
+                box-shadow: 0 4px 10px rgba(0, 0, 0, 7%);
+
+                a {
+                    background: #484847;
+                    border-color: #ECEBF1;
+
+                    img {
+                        display: none;
+
+                        &:nth-child(2) {
+                            display: block;
+                        }
+                    }
+                }
+            }
+        }
+
+        &_right {
+            padding-top: 60px;
+            width: 100%;
+
+            @include media(992) {
+                padding-top: 0;
+            }
+
+            h3 {
+                font-size: 16px;
+                font-weight: bold;
+                margin-bottom: 18px;
+            }
+
+            ul {
+                font-size: 16px;
+                margin-bottom: 50px;
+
+                @include media(992) {
+                    margin-bottom: 30px;
+                }
+            }
+
+            .bottom_text {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                @include media(992) {
+                    flex-direction: column;
+                    align-items: flex-start;
+                }
+
+                p {
+                    font-size: 16px;
+                    font-weight: 400;
+                }
+
+                h4 {
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #754343;
+
+                    span {
+                        font-size: 16px;
+                        font-weight: 400;
+                        font-style: italic;
+                        margin-left: 7px;
+                        color: black;
+                    }
+                }
+
+                h5 {
+                    font-size: 16px;
+                    font-weight: 600;
+                }
+            }
+        }
+    }
+
+    .links {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 1048px;
+        margin: 69px auto 0;
+
+        @include media(992) {
+            margin-top: 30px;
+        }
+
+        a {
+            font-size: 20px;
+            font-weight: normal;
+            font-family: $font-montserrat;
+
+            @include media(992) {
+                font-size: 16px;
+            }
+        }
+    }
+}
+// My ads end
